tests/error/modifier_errors/dagger_loop1.err
Error: Invalid expression in dagger (at $FILE:8:8)
  | 
6 | def test() -> None:
7 |     with dagger:
8 |         for _ in range(46):
  |         ^^^^^^^^^^^^^^^^^^^
9 |             pass
  | ^^^^^^^^^^^^^^^^ Loop found in a dagger context

Note:
  | 
6 | def test() -> None:
7 |     with dagger:
  |          ------ dagger modifier is used here

Guppy compilation failed due to 1 previous error
